<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/share_experience"
    >

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="fill_parent"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_questions_linear"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="60dp"
            android:paddingBottom="10dp"
            >
        <com.igsdigital.premierfeedback.custom.PremierCheckBox
            android:id="@+id/chk_staff_attitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/staff_attitude"
            android:paddingLeft="10dp"
            android:button="@drawable/checkbox"
            android:layout_marginTop="10dp"
            android:checked="false" />
            <com.igsdigital.premierfeedback.custom.PremierCheckBox
                android:id="@+id/chk_lack_of_awareness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/lack_of_awareness"
                android:paddingLeft="10dp"
                android:button="@drawable/checkbox"
                android:layout_marginTop="10dp"
                android:checked="false" />
            <com.igsdigital.premierfeedback.custom.PremierCheckBox
                android:id="@+id/chk_staff_unavailabiliyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/staff_unavailability"
                android:paddingLeft="10dp"
                android:button="@drawable/checkbox"
                android:layout_marginTop="10dp"
                android:checked="false" />
            <com.igsdigital.premierfeedback.custom.PremierCheckBox
                android:id="@+id/chk_system_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/system_downtime"
                android:paddingLeft="10dp"
                android:button="@drawable/checkbox"
                android:layout_marginTop="10dp"
                android:checked="false" />
            <com.igsdigital.premierfeedback.custom.PremierCheckBox
                android:id="@+id/chk_transaction_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/transaction_time"
                android:button="@drawable/checkbox"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:checked="false" />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_questions_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/submit"
            android:layout_alignParentRight="true"
            android:layout_below="@id/layout_questions_linear"
            android:onClick=""
            />

    </RelativeLayout>

</RelativeLayout>